--- a/definisi.html
+++ b/definisi.html
@@ -62,7 +62,7 @@
               <div class="container">
                 <h1 class="title">
                   <i class="fa fa-bell-o"></i> 
-                   Definition of carvone
+                   Definition of Carvone
                 </h1>
               
                 <h2 class="subtitle">
