--- a/about us.html
+++ b/about us.html
@@ -172,7 +172,7 @@ body { background-color: lightgreen; }
             <div class="content">
               <!-- ini apen -->
               <h4> Avenia L.B </h4>
-              <p>tinggal diisi deskripsi</p>
+              <p>I have no Idea how to describe myself.</p>
               <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
