--- a/properties.html
+++ b/properties.html
@@ -98,8 +98,9 @@
               
                       <h3>Conjugate additions</h3>
                 <p>As an α,β;-unsaturated ketone, carvone undergoes conjugate additions of nucleophiles. For example, carvone reacts with lithium dimethylcuprate to place a methyl group trans to the isopropenyl group with good stereoselectivity. The resulting enolate can then be allylated using allyl bromide to give ketone .</p>
-                      <h3>Physical Properties</h3>
-               <!--disini belum ketemugambarnya-->
+                
+              <h2>Physical Properties</h2>
+               <!--belum ketemu sumbernya-->
 
 
                 <h3 class="has-text-centered">powered by Earlene</h3>
