--- a/Etymology.html
+++ b/Etymology.html
@@ -83,7 +83,7 @@
                 <div class="media-content has-text-centered">
                   <p class="title article-title">Why 'Carvone' ?</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#">@d</a> on October 7, 2017
+                    <a href="#"></a> on February, 2018
                   </p>
                 </div>
               </div>
