--- a/manufacture.html
+++ b/manufacture.html
@@ -63,7 +63,7 @@
                 </h1>
               
                 <h2 class="subtitle">
-                  mari kita bahas
+                 Let's Discuss It
                 </h2>
               </div>
             </div>
@@ -80,7 +80,7 @@
                 <div class="media-content has-text-centered">
                   <p class="title article-title">Manufacturing the Carvone</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#">@d</a> on October 7<sup>th</sup>, 2018
+                    <a href="#"></a> on February<sup>th</sup>, 2018
                   </p>
                 </div>
               </div>
