--- a/definisi.html
+++ b/definisi.html
@@ -66,7 +66,7 @@
                 </h1>
               
                 <h2 class="subtitle">
-                  Let's discuss about our material 
+                  Let's Discuss About It
                 </h2>
               </div>
             </div>
@@ -99,7 +99,7 @@
                   <li> 1-Methyl-4-isopropenyl-Δ-cyclohexen-2-oneCarvol (obsolete).  </ul>
 
 
-                <h3 class="has-text-centered">powered by Aura</h3>
+                <h3 class="has-text-centered">powered by Aura Putri</h3>
                 
               </div>
             </div>
