--- a/properties.html
+++ b/properties.html
@@ -80,7 +80,7 @@
                 <div class="media-content has-text-centered">
                   <p class="title article-title">Do you know Carvone?</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#">@d</a> on February, 2018
+                    <a href="#"> </a> on February, 2018
                   </p>
                 </div>
               </div>
