--- a/uses.html
+++ b/uses.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+htmlhtml<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -84,7 +84,7 @@
                     <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image">
                 </div>
                 <div class="media-content has-text-centered">
-                  <p class="title article-title">What's Carvone...?</p>
+                  <p class="title article-title">What's Carvone?</p>
                   <p class="subtitle is-6 article-subtitle">
                     <a href="#">
                   </p>
