--- a/properties.html
+++ b/properties.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+html<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
               Uses
             </a>
             <a class="navbar-item" href="history.html">
-              history
+              History
             </a>
             <a class="navbar-item" href="manufacture.html">
               Manufacture
@@ -38,7 +38,7 @@
               Structure
             </a>
             <a class="navbar-item" href="Etymology.html">
-              ethymologi
+              Ethymologi
               </a>
             <a class="navbar-item" href="about us.html">
               About Us
@@ -63,7 +63,7 @@
                 </h1>
               
                 <h2 class="subtitle">
-                  Let's discuss about our material 
+                  Let's Discuss It!
                 </h2>
               </div>
             </div>
@@ -78,7 +78,7 @@
                     <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image">
                 </div>
                 <div class="media-content has-text-centered">
-                  <p class="title article-title">Do you know Carvone?</p>
+                  <p class="title article-title">Do You Know What Carvone Is?</p>
                   <p class="subtitle is-6 article-subtitle">
                     <a href="#"> </a> on February, 2018
                   </p>
