--- a/history.html
+++ b/history.html
@@ -60,7 +60,7 @@
               <div class="container">
                 <h1 class="title">
                   <i class="fa fa-bell-o"></i> 
-                   history of carvone
+                   Carvone's History
                 </h1>
               
                 <h2 class="subtitle">
@@ -79,7 +79,7 @@
                     <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image">
                 </div>
                 <div class="media-content has-text-centered">
-                  <p class="title article-title">what is carvone...?</p>
+                  <p class="title article-title">What is Carvone...?</p>
                   <p class="subtitle is-6 article-subtitle">
                     <a href="#"></a> on February, 2018
                   </p>
@@ -87,8 +87,8 @@
               </div>
 
             <div class="content article-body">
-                <p>Caraway was used for medicinal purposes by the ancient Romans,[3] but carvone was probably not isolated as a pure compound until Franz Varrentrapp (1815–1877) obtained it in 1849.[2][13] It was originally called carvol by Schweizer. Goldschmidt and Zürrer identified it as a ketone related to limonene,[14] and the structure was finally elucidated by Georg Wagner (1849–1903) in 1894. </p>
-                <p> English use of the term caraway dates back to at least 1440,[8] and is considered by Walter William Skeat to be of Arabic origin, though Gernot Katzer believes the Arabic al-karawya كراوية (cf. Spanish alcaravea) to be derived from the Latin carum.[7]</p>
+                <p>Caraway was used for medicinal purposes by the ancient Romans, but carvone was probably not isolated as a pure compound until Franz Varrentrapp (1815–1877) obtained it in 1849.[2][13] It was originally called carvol by Schweizer. Goldschmidt and Zürrer identified it as a ketone related to limonene, and the structure was finally elucidated by Georg Wagner (1849–1903) in 1894. </p>
+                <p> English use of the term caraway dates back to at least 1440, and is considered by Walter William Skeat to be of Arabic origin, though Gernot Katzer believes the Arabic al-karawya كراوية (cf. Spanish alcaravea) to be derived from the Latin carum.</p>
 
                <p> Carvone, given by the IUPAC name 2-Methyl-5-(1-methylethenyl)-2-cyclohexenone and Chemical Abstract Service number 2244-16-8, is a member of the family of chemicals called terpenoids. Caraway, whose molecular weight is 150.22 g / mol, has a boiling point of 231 °C and melting point of 22.5 °C and a density of .91 g/ ml. Its seeds are brown with a rough appearance and texture and its oil is a pale yellow/ translucent liquid. When in oil form it is normally soluble in alcohol and oils but rather insoluble in water (MSDS Caraway).</p>
 
