--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               Uses
             </a>
             <a class="navbar-item " href="properties.html">
-              properties
+              Properties
             </a>
             <a class="navbar-item" href="history.html">
-              history
+              History
             </a>
             <a class="navbar-item" href="manufacture.html">
               Manufacture
@@ -47,10 +47,10 @@
               Structure
             </a>
             <a class="navbar-item" href="Etymology.html">
-              ethymologi
+              Ethymologi
               </a>
             <a class="navbar-item" href="about us.html">
-              About Us
+              About Us!
             </a>
 
           </div>
