--- a/uses.html
+++ b/uses.html
@@ -86,7 +86,7 @@ htmlhtml<!DOCTYPE html>
                 <div class="media-content has-text-centered">
                   <p class="title article-title">What's Carvone?</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#">
+                    <a href="#"></a> on February, 2018
                   </p>
                 </div>
               </div>
