--- a/uses.html
+++ b/uses.html
@@ -71,7 +71,7 @@ htmlhtml<!DOCTYPE html>
                 <h2 class="subtitle">
                   Let's Start It! 
                 </h2>
-              </div>html
+              </div>
             </div>
           </section>
           <!-- kode promo blocknya sampe sini-->
