--- a/about us.html
+++ b/about us.html
@@ -141,9 +141,9 @@ body { background-color: lightgreen; }
           <div class="card-content">
             <div class="content">
               <!-- ini aip-->
-              <h4>Arif F.S </h4>
+              <h4>Arif F.Sopian </h4>
               <p>a person from Sukabumi who loves mountain. Like playing mobile games and travelling.</p>
-              <p><a href="#">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
+              <p><a href="https://arifsopian27.github.io/">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
         </div>
