--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ethymologi</title>
+  <title>History</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <!-- Bulma Version 0.6.0 -->
@@ -81,7 +81,7 @@
                 <div class="media-content has-text-centered">
                   <p class="title article-title">What is Carvone...?</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#"></a> on February, 2018
+                    <a href="#"></a>
                   </p>
                 </div>
               </div>
