--- a/definisi.html
+++ b/definisi.html
@@ -44,7 +44,7 @@
               Ethymologi
               </a>
             <a class="navbar-item" href="about us.html">
-              About Us
+              About Us!
             </a>
 
           </div>
@@ -66,7 +66,7 @@
                 </h1>
               
                 <h2 class="subtitle">
-                  Let's Discuss About It
+                  Let's Discuss About It!
                 </h2>
               </div>
             </div>
@@ -81,7 +81,7 @@
                     <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image">
                 </div>
                 <div class="media-content has-text-centered">
-                  <p class="title article-title">Do you know Carvone?</p>
+                  <p class="title article-title">Do you know What Carvone Is?</p>
                   <p class="subtitle is-6 article-subtitle">
                     <a href="#"></a> on February, 2018
                   </p>
@@ -96,7 +96,7 @@
                 <ul>
                   <li>2-Methyl-5-(prop-1-en-2-yl)cyclohex-2-enone.</li>
                   <li> 2-Methyl-5-(1-methylethenyl)-2-cyclohexenone Δ-p-Menthadien-2-one.</li>
-                  <li> 1-Methyl-4-isopropenyl-Δ-cyclohexen-2-oneCarvol (obsolete).  </ul>
+                  <li> 1-Methyl-4-issopropenyl-Δ-cyclohexen-2-oneCarvol (obsolete).  </ul>
 
 
                 <h3 class="has-text-centered">powered by Aura Putri</h3>
@@ -106,7 +106,7 @@
           </div>
           <!-- artkel-->
 
-          
+          s
     </section>
     <!-- ujung feed -->
   </div>
