--- a/properties.html
+++ b/properties.html
@@ -97,7 +97,7 @@
                 <!--disini juga ada gambar-->
               
                       <h3>Conjugate additions</h3>
-              <p>As an <i>α,β-unsaturated ketone</i>, carvone undergoes conjugate additions of nucleophiles. For example, carvone reacts with lithium dimethylcuprate to place a methyl group trans to the isopropenyl group with good stereoselectivity. The resulting enolate can then be allylated using allyl bromide to give ketone .</p>
+              <p>As an α,β-unsaturated ketone, carvone undergoes conjugate additions of nucleophiles. For example, carvone reacts with lithium dimethylcuprate to place a methyl group trans to the isopropenyl group with good stereoselectivity. The resulting enolate can then be allylated using allyl bromide to give ketone .</p>
                 
               <h2>Physical Properties</h2>
                <!--belum ketemu sumbernya-->
