--- a/about us.html
+++ b/about us.html
@@ -33,7 +33,7 @@ body { background-color: lightgreen; }
               </a>
               <!-- hiasan aja-->
               <a class="navbar-item">
-                kemal ganteng
+                Kemal ganteng
               </a>
               <a class="navbar-item">
                 Documentation
@@ -55,12 +55,12 @@ body { background-color: lightgreen; }
     <div class="hero-body" style="background-color: lightgreen;">
       <div class="container has-text-centered">
         <h1 class="title">
-        Want to know about us???
+        Want to Know About Us ?
 
         </h1>
         <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true">
         <h2 class="subtitle">
-         We're just an unique team that got a job to make a website about CARVONE</br> (an organic compound that usually found in spearmint, caraway seed, and dill). We have learned many things</br>while we did this project. We know that our website has many terible things that maybe must be fix someday. hope you enjoy it. Happy Reading!!
+         We're just an unique team that got a job to make a website about CARVONE</br> (an organic compound that usually found in spearmint, caraway seed, and etc). We have learned many things</br>while we did this project. We know that our website has many terible things that maybe must be fix someday. hope you enjoy it. Happy Reading!!
         </h2>
       </div>
     </div>
@@ -90,8 +90,8 @@ body { background-color: lightgreen; }
           <div class="card-content">
             <!-- ini diisi yang kemal ya lin-->
             <div class="content">
-              <h4>Muhammad kemal Caesar A.P </h4>
-              <p>hello guys my  name is kemal i was born on 04 october 2000, i have a hobby, and my hobby is playing skateboard. in this group i am the programmer </p>
+              <h4>Muhammad Kemal Caesar A.P </h4>
+              <p>Hi Guys, my  name is Kemal. I was born on October 4 <SUP>TH</SUP>200. My hobby is playing skateboard. I am as programmer. </p>
               <p><a href="https://kemalcaesar.github.io/">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -105,8 +105,8 @@ body { background-color: lightgreen; }
           <div class="card-content">
             <div class="content">
               <!-- ini yang jafar-->
-              <h4>M.ja'far Shodik </h4>
-              <p>Hello guys my name is jafar , in this group my job is same like kemal , i am the programmer to</p>
+              <h4>M. Ja'far Shodik </h4>
+              <p>Hi Guys, my name is Ja'far. I am as programmer in this group just like Kemal.</p>
               <p><a href="#">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -121,7 +121,7 @@ body { background-color: lightgreen; }
             <div class="content">
               <!-- ini yang erlin-->
               <h4> Earlene Novalyana  </h4>
-              <p>just an ordinary girl who loves writing and music. A labil-person who always eat an ice cream when she get mad or stressed. A chubby girl who have a dream to be a famous writer in the future.</p>
+              <p>Just an ordinary girl who loves writing and music. A labil-person who always eat an ice cream when she get mad or stressed. A chubby girl who have a dream to be a famous writer in the future.</p>
               <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -142,7 +142,7 @@ body { background-color: lightgreen; }
             <div class="content">
               <!-- ini aip-->
               <h4>Arif F.Sopian </h4>
-              <p>a person from Sukabumi who loves mountain. Like playing mobile games and travelling.</p>
+              <p>A person from Sukabumi who loves mountain. Like playing mobile games and travelling.</p>
               <p><a href="https://arifsopian27.github.io/">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -156,7 +156,7 @@ body { background-color: lightgreen; }
           <div class="card-content">
             <div class="content">
               <!-- ini ijra -->
-              <h4>Ijra A</h4>
+              <h4>Izra Aulifa Rahmawadi</h4>
               <p>tinggal diisi deskripsi</p>
               <p><a href="#">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
             </div>
@@ -171,7 +171,7 @@ body { background-color: lightgreen; }
           <div class="card-content">
             <div class="content">
               <!-- ini apen -->
-              <h4> Avenia L.B </h4>
+              <h4> Avenia Latifa Barep </h4>
               <p>I have no Idea how to describe myself.</p>
               <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
@@ -190,8 +190,9 @@ body { background-color: lightgreen; }
           <div class="card-content">
             <div class="content">
               <!-- ini ola -->
-              <h4>Aura Putri A </h4>
-              <p>tinggal diisi deskripsi</p>
+              <h4>Aura Putri Aryanti </h4>
+              <p>Love Historical Romance novel so damn much. </p>
+              <p>Alert: We might be just met for a sec, but I'll hug you until it feel uncomfortable.</p>
               <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -205,7 +206,7 @@ body { background-color: lightgreen; }
           <div class="card-content">
             <div class="content">
               <!-- ini lija -->
-              <h4>Liza Efrizal P</h4>
+              <h4>Liza Efrizal Putri</h4>
               <p>tinggal diisi deskripsi</p>
               <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
