--- a/about us.html
+++ b/about us.html
@@ -76,7 +76,7 @@ body { background-color: lightgreen; }
   
    <div class="container has-text-centered">
    <h2 class="subtitle">
-        Our biodata
+        Our Biodata
         </h2>
       </div>
 
@@ -91,7 +91,7 @@ body { background-color: lightgreen; }
             <!-- ini diisi yang kemal ya lin-->
             <div class="content">
               <h4>Muhammad Kemal Caesar A.P </h4>
-              <p>Hi Guys, my  name is Kemal. I was born on October 4 <SUP>TH</SUP>200. My hobby is playing skateboard. I am as programmer. </p>
+              <p>Hi Guys, my  name is Kemal. I was born on October 4 <SUP>TH</SUP> 2000. My hobby is playing skateboard. I am as programmer. </p>
               <p><a href="https://kemalcaesar.github.io/">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
