--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           </div>
           <div class="column is-6 is-offsehttps://en.wikipedia.org/wiki/Carvonet-1" >
             <h1 class="title is-2" >
-              What is the carvone?
+              What is Carvone?
             <h2 class="subtitle is-4">
-              Let's Discuss about our material.
+                Let's Discuss About It
             </h2>
             <br>
             <p class="has-text-centered">
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="tabs is-centered">
           <ul>
-            <li><a>powered by kemalcaesar</a></li>
+            <li><a>Powered by Kemal Caesar</a></li>
           </ul>
         </div>
       </div>
