--- a/about us.html
+++ b/about us.html
@@ -70,7 +70,7 @@ body { background-color: lightgreen; }
 
   <div class="box cta">
     <p class="has-text-centered">
-      <span class="tag is-primary">Note</span>we are also here in the learning phase. So, if there is any mistake please correct.
+      <span class="tag is-primary">Note</span>  we are also here in the learning phase. So, if there is any mistake please correct.
     </p>
   </div>
   
@@ -91,7 +91,7 @@ body { background-color: lightgreen; }
             <!-- ini diisi yang kemal ya lin-->
             <div class="content">
               <h4>Muhammad Kemal Caesar A.P </h4>
-              <p>Hi Guys, my  name is Kemal. I was born on October 4 <SUP>TH</SUP> 2000. My hobby is playing skateboard. I am as programmer. </p>
+              <p>Hi Guys, my  name is Kemal. I was born on October 4 <SUP>TH</SUP>200. My hobby is playing skateboard. I am as programmer. </p>
               <p><a href="https://kemalcaesar.github.io/">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -157,7 +157,7 @@ body { background-color: lightgreen; }
             <div class="content">
               <!-- ini ijra -->
               <h4>Izra Aulifa Rahmawadi</h4>
-              <p>tinggal diisi deskripsi</p>
+              <p>Still confuse about how to describe myself.</p>
               <p><a href="#">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
