--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               Structure
             </a>
             <a class="navbar-item" href="Etymology.html">
-              Ethymologi
+              Ethymology
               </a>
             <a class="navbar-item" href="about us.html">
               About Us!
