--- a/about us.html
+++ b/about us.html
@@ -91,7 +91,7 @@ body { background-color: lightgreen; }
             <!-- ini diisi yang kemal ya lin-->
             <div class="content">
               <h4>Muhammad Kemal Caesar A.P </h4>
-              <p>Hi Guys, my  name is Kemal. I was born on October 4 <SUP>TH</SUP>200. My hobby is playing skateboard. I am as programmer. </p>
+              <p>Hi Guys, my  name is Kemal. I was born on October 4 <SUP>th</SUP>200. My hobby is playing skateboard. I am as programmer. </p>
               <p><a href="https://kemalcaesar.github.io/">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -142,7 +142,7 @@ body { background-color: lightgreen; }
             <div class="content">
               <!-- ini aip-->
               <h4>Arif F.Sopian </h4>
-              <p>A person from Sukabumi who loves mountain. Like playing mobile games and travelling.</p>
+              <p>A unique boy from Sukabumi who loves mountain. Like playing mobile games and travelling.</p>
               <p><a href="https://arifsopian27.github.io/">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
@@ -207,7 +207,7 @@ body { background-color: lightgreen; }
             <div class="content">
               <!-- ini lija -->
               <h4>Liza Efrizal Putri</h4>
-              <p>tinggal diisi deskripsi</p>
+              <p>A girl who live so far away from her family.</p>
               <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
