--- a/about us.html
+++ b/about us.html
@@ -55,7 +55,7 @@ body { background-color: lightgreen; }
     <div class="hero-body" style="background-color: lightgreen;">
       <div class="container has-text-centered">
         <h1 class="title">
-        Want to Know About Us ?
+        Want to Know More About Us ?
 
         </h1>
         <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true">
@@ -70,7 +70,7 @@ body { background-color: lightgreen; }
 
   <div class="box cta">
     <p class="has-text-centered">
-      <span class="tag is-primary">Note</span>  we are also here in the learning phase. So, if there is any mistake please correct.
+      <span class="tag is-primary">Note</span>    we are also here in the learning phase. So, if there is any mistake please correct.
     </p>
   </div>
   
@@ -207,7 +207,7 @@ body { background-color: lightgreen; }
             <div class="content">
               <!-- ini lija -->
               <h4>Liza Efrizal Putri</h4>
-              <p>A girl who live so far away from her family.</p>
+              <p>A girl who lives so far away from her family.</p>
               <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
