--- a/about us.html
+++ b/about us.html
@@ -60,7 +60,7 @@ body { background-color: lightgreen; }
         </h1>
         <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true">
         <h2 class="subtitle">
-         We're just an unique team that got a job to make a website about CARVONE</br> (an organic compound that usually found in spearmint, caraway seed, and etc). We have learned many things</br>while we did this project. We know that our website has many terible things that maybe must be fix someday. hope you enjoy it. Happy Reading!!
+         We're just a unique team that got a job to make a website about CARVONE</br> (an organic compound that usually found in spearmint, caraway seed, and etc). We have learned many things</br>while we did this project. We know that our website has many terible things that maybe must be fix someday. hope you enjoy it. Happy Reading!!
         </h2>
       </div>
     </div>
