--- a/history.html
+++ b/history.html
@@ -56,7 +56,7 @@
 
           <!-- blok promonya disini -->
           <section  class="hero is-info is-bold is-small promo-block">
-            <div class="hero-body ">r material
+            <div class="hero-body ">
               <div class="container">
                 <h1 class="title">
                   <i class="fa fa-bell-o"></i> 
@@ -81,8 +81,8 @@
                 <div class="media-content has-text-centered">
                   <p class="title article-title">What is Carvone ?</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#"></a>
-                  </p>
+                    <a href="#"></a> on February,2018
+                  </p><a href="#"></a> on February, 2018
                 </div>
               </div>
 
