--- a/manufacture.html
+++ b/manufacture.html
@@ -30,16 +30,16 @@
               Uses
             </a>
             <a class="navbar-item " href="properties.html">
-              properties
+              Properties
             </a>
             <a class="navbar-item" href="history.html">
-              history
+              History
             </a>
             <a class="navbar-item " href="structure.html" >
               Structure
             </a>
             <a class="navbar-item" href="Etymology.html">
-              ethymologi
+              Ethymology
               </a>
             <a class="navbar-item" href="about us.html">
               About Us
@@ -99,7 +99,7 @@
 
               <h3>Formulation</h3>
                 <p>
-                The proportion of carvone in herb oil has been reported to vary from 6 to 44%, depending on the geographical origin ... while the amount of carvone in the oil of dill seeds is more constant, 40-55%. <br>
+                The proportion of carvone in herb oil has been reported to vary from 6 to 44%, depending on the geographical origin, while the amount of carvone in the oil of dill seeds is more constant, 40-55%. <br>
                   <i>[Huopalhti R, Linko RR; J Agric Food Chem 31: 331-3 (1983)]</i>
                 </p>
                
