--- a/manufacture.html
+++ b/manufacture.html
@@ -127,7 +127,7 @@
                 Bedoukian Research Inc., 21 Finance Dr., Danbury, CT 06810, 203/830-4000 /Registrant; L-Carvone/
                 </p>
 
-                <footer class="has-text-right">Powered by Ja'far</footer>
+                <footer class="has-text-CENTRE">Powered by Ja'far</footer>
 
               </div>
             </div>
