--- a/Etymology.html
+++ b/Etymology.html
@@ -95,7 +95,7 @@
                 <p> Caraway was used for medicinal purposes by the ancient Romans, but carvone was probably not isolated as a pure compound until Franz Varrentrapp (1815–1877) obtained it in 1849. It was originally called carvol by Schweizer. Goldschmidt and Zürrer identified it as a ketone related to limonene,and the structure was finally elucidated by Georg Wagner (1849–1903) in 1894.</p>
                 
 
-                <h3 class="has-text-centered">powered by Avenia Latifa</h3>
+                <h3 class="has-text-centered">Powered by Avenia Latifa</h3>
                 
               </div>
             </div>
